implemented iterative multi time-window consume of stations api,  added station order, implemented rendering of routes, labels and times, refactored timetables provider

--- a/render/time-space.tmpl
+++ b/render/time-space.tmpl
@@ -1,6 +1,31 @@
 <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" 
     width="100%" height="100%" viewPort="0 0 {{.Width}} {{.Height}}">
-    {{range .Stations}}
-        <text x="{{$.X .Coord}}" y="{{$.Y .Coord}}">{{.Station.Name}}</text>
-    {{end}}
+    <style>
+        .arrival {
+            display: none;
+        }
+    </style>
+    <defs>
+        <marker id="dot" viewBox="0 0 10 10" refX="5" refY="5"
+            markerWidth="5" markerHeight="5">
+        <circle cx="5" cy="5" r="5" />
+        </marker>
+    </defs>
+{{range .Stations}}
+    <text x="{{$.X .Coord}}" y="{{$.Y .Coord}}">{{.Station.EvaNumber}}</text>
+{{end}}
+{{range .Edges}}
+    <path id="{{.ID}}" d="M {{$.X .From}},{{$.Y .From}} L{{$.X .To}},{{$.Y .To}}"
+        marker-start="url(#dot)" marker-end="url(#dot)" stroke="black" class="
+    {{- range .ShortestPathFor -}}
+        shortest-path-{{.ID}}
+    {{- end -}}        
+    " />
+    <text>
+        <textPath href="#{{.ID}}" startOffset="50%" text-anchor="middle">{{$.Label .}}</textPath>
+    </text>
+    <text x="{{$.X .To}}" y="{{$.Y .To}}" text-anchor="end" class="arrival">{{$.Arrival .}}</text>
+    <text x="{{$.X .From}}" y="{{$.Y .From}}" text-anchor="start" class="departure">{{$.Departure .}}</text>
+
+{{end}}
 </svg>
