improved rendering, show labels only when selected

--- a/client.css
+++ b/client.css
@@ -5,3 +5,15 @@
 .edge circle {
     stroke: none;
 }
+
+.arrival, .departure, .label {
+    visibility: hidden;
+}
+
+.arrival.selected, .departure.selected, .label.selected {
+    visibility: visible;
+}
+
+.edge.selected {
+    stroke: red;
+}
