--- a/render/time-space.tmpl
+++ b/render/time-space.tmpl
@@ -1,11 +1,6 @@
 <?xml-stylesheet type="text/css" href="client.css" ?>
 <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" 
-    width="100%" height="100%" viewPort="0 0 {{.Width}} {{.Height}}">
-    <style>
-        .arrival {
-            display: none;
-        }
-    </style>
+    viewBox="0 0 {{.SpaceAxisSize}} {{.TimeAxisSize}}">
     <defs>
         <marker id="dot" viewBox="0 0 10 10" refX="5" refY="5"
             markerWidth="5" markerHeight="5">
@@ -17,14 +12,23 @@
 {{end}}
 {{range .Edges}}
     <path id="{{.ID}}" d="M {{$.X .From}},{{$.Y .From}} L{{$.X .To}},{{$.Y .To}}"
-        marker-start="url(#dot)" marker-end="url(#dot)" stroke="black" class="edge
-    {{- range .ShortestPathFor }} shortest-path-{{.ID}}{{ end -}}
-    " />
+        marker-start="url(#dot)" marker-end="url(#dot)" stroke="black"
+        class="edge {{ range .ShortestPathFor }} shortest-path-{{.ID}}{{ end }}"
+        />
     <text>
-        <textPath href="#{{.ID}}" startOffset="50%" text-anchor="middle">{{$.Label .}}</textPath>
+        <textPath href="#{{.ID}}" startOffset="50%" text-anchor="middle"
+            class="label shortest-path-{{.ID}} {{ range .ShortestPathFor }} shortest-path-{{.ID}}{{ end }}">
+            {{$.Label .}}
+        </textPath>
     </text>
-    <text x="{{$.X .To}}" y="{{$.Y .To}}" text-anchor="end" class="arrival">{{$.Arrival .}}</text>
-    <text x="{{$.X .From}}" y="{{$.Y .From}}" text-anchor="start" class="departure">{{$.Departure .}}</text>
+    <text x="{{$.X .To}}" y="{{$.Y .To}}" text-anchor="end"
+        class="arrival shortest-path-{{.ID}} {{ range .ShortestPathFor }} shortest-path-{{.ID}}{{ end }}">
+        {{$.Arrival .}}
+    </text>
+    <text x="{{$.X .From}}" y="{{$.Y .From}}" text-anchor="start" 
+        class="departure shortest-path-{{.ID}} {{ range .ShortestPathFor }} shortest-path-{{.ID}}{{ end }}">
+        {{$.Departure .}}
+    </text>
 {{end}}
     <script xlink:href="../client.js" />
 </svg>
