increase size of clickable areas for edges, put redundant edges in background

--- a/client.css
+++ b/client.css
@@ -1,5 +1,11 @@
 .edge {
     stroke-width:2px;
+    stroke: black;
+}
+
+.edge-toucharea {
+    stroke-width: 20px;
+    stroke: transparent;
 }
 
 #dot circle {
