minor style and behaviour fixes

--- a/client.css
+++ b/client.css
@@ -32,6 +32,10 @@ svg {
     fill: black;
 }
 
+.station-label {
+    text-anchor: middle;
+}
+
 .arrival, .departure, .label {
     visibility: hidden;
 }
