--- a/res/client.css
+++ b/res/client.css
@@ -37,6 +37,11 @@ svg {
 
 .arrival, .departure, .label {
     visibility: hidden;
+    text-shadow: 1px 1px 2px white;
+}
+
+.arrival, .departure {
+    font-weight: bold;
 }
 
 .arrival.selected, .departure.selected, .label.selected {
