--- a/res/client.css
+++ b/res/client.css
@@ -1,10 +1,33 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@400;700&display=swap');
+/* roboto-condensed-regular - latin */
+@font-face {
+    font-family: 'Roboto Condensed';
+    font-style: normal;
+    font-weight: 400;
+    src: local(''),
+         url('./fonts/roboto-condensed-v25-latin-regular.woff2') format('woff2'), /* Chrome 26+, Opera 23+, Firefox 39+ */
+         url('./fonts/roboto-condensed-v25-latin-regular.woff') format('woff'); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
+}
+/* roboto-condensed-700 - latin */
+@font-face {
+    font-family: 'Roboto Condensed';
+    font-style: normal;
+    font-weight: 700;
+    src: local(''),
+         url('./fonts/roboto-condensed-v25-latin-700.woff2') format('woff2'), /* Chrome 26+, Opera 23+, Firefox 39+ */
+         url('./fonts/roboto-condensed-v25-latin-700.woff') format('woff'); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
+}
 
-svg {
+svg, body {
     background-color: white;
     font-family: 'Roboto Condensed', sans-serif;
     font-size: 16px;
-    line-height: 16px;
+    line-height: 18px;
+}
+
+html, body {
+    margin: 0;
+    padding: 0;
+    color: #707070;
 }
 
 .edge {
@@ -126,6 +149,119 @@ svg {
 .ui-link {
     dominant-baseline: middle;
     text-anchor: middle;
-    font-weight: bold;
+    font-weight: 700;
     fill: #01579B;
+    text-decoration: none;
+}
+
+a text {
+    dominant-baseline: middle;
+    fill: #707070;
+    text-anchor: middle;
+    text-decoration: underline;
+}
+
+
+
+#header {
+    background-color: #B71C1C;
+    text-align: center;
+    line-height: 50px;
+    box-shadow: 0 1px 2px rgba(0,0,0,0.5);  
+}
+
+#header h1, #header a {
+    margin: 0;
+    padding: 0;
+    font-variant: small-caps;
+    text-decoration: none;
+    color: white;
+}
+
+#header div {
+    max-width: 400px;
+    margin: 0 auto;
+    padding: 0 8px;
+}
+
+#container {
+    max-width: 400px;
+    margin: 0 auto;
+    padding: 0 8px;
+}
+
+.station-autocomplete, #datetime {
+    font-family: 'Roboto Condensed', sans-serif;
+    color: black;
+    font-size: 16px;
+    line-height: 16px;
+    width: 100%;
+    padding: 8px;
+    box-sizing: border-box;
+    border:1px solid #afafaf;
+    outline: 0px none;
+    margin: 2px 0;
+    border-radius: 5px;
+}
+
+#datetime {
+    width: 50%;
+    margin-top: 20px;
+}
+
+#default-now {
+    width: 40%;
+    display: inline-block;
+    margin-left: 10px;
+}
+
+.station-autocomplete:focus, #datetime:focus {
+    border:1px solid #707070;
+}
+
+.submit {
+    border-radius: 5px;
+    padding: 11px;
+    color: #01579B;
+    background-color: #dbdbdb;
+    text-decoration: none;
+    font-weight: 700;
+    cursor: pointer;
+    display: inline-block;
+    font-family: 'Roboto Condensed', sans-serif;
+    font-size: 16px;
+    text-align: center;
+    border: 0 none;
+    margin: 0;
+    width: 100%;
+    transition: background-color 0.218s;
+}
+
+.submit:active {
+    background-color: #afafaf;
+}
+
+#submit-container {
+    position: relative;
+    margin: 20px 0;
+}
+#submit-container img {
+    display: none;
+    position: absolute;
+    left: 11px;
+    top: 14px; 
+    height: 12px;
+}
+.ui-widget.ui-autocomplete {
+    font-family: 'Roboto Condensed', sans-serif;
+    box-shadow: 0 1px 2px rgba(0,0,0,0.5);   
+    border:1px solid #707070;
+}
+
+#footer {
+    margin-top: 50px;
+}
+#footer, #footer a {
+    color: #707070;
+    text-align: center;
 }
