--- a/res/client.css
+++ b/res/client.css
@@ -178,6 +178,10 @@ a text {
     color: white;
 }
 
+#header h1 sup {
+    font-size: 16px;
+}
+
 #header div {
     max-width: 400px;
     margin: 0 auto;
