--- a/ui/src/routes/main.css
+++ b/ui/src/routes/main.css
@@ -18,7 +18,6 @@
 }
 
 svg, body {
-  background-color: white;
   font-family: 'Roboto Condensed', sans-serif;
   font-size: 16px;
   line-height: 18px;
@@ -196,7 +195,7 @@ html, body {
 
 .edge.provider-shortest-path.selected {
   stroke: #880E4F;
-  filter: drop-shadow( 0px 0px 3px rgba(136, 14, 79, .7));
+  filter: drop-shadow( 0px 0px 5px rgba(136, 14, 79, .7));
 }
 
 
@@ -384,6 +383,33 @@ a text {
   height: 12px;
 }
 
+.refresh {
+  float: right;
+  margin: -10px -10px 0 0;
+}
+.refresh a {
+  padding: 10px;
+  display: inline-block;
+}
+
+.indicator {
+  width: 24px;
+  height: 24px;
+}
+.indicator.loading path {
+  animation-name: rotate;
+  animation-duration: 2s;
+  animation-iteration-count: infinite;
+  transform-origin: 151.7985px 151.7985px;
+}
+@keyframes rotate {
+  0% {
+      transform: rotate(0deg);
+  }
+  100% {
+      transform: rotate(360deg);
+  }
+}
 
 #footer {
   margin-top: 50px;
