--- a/ui/src/routes/main.css
+++ b/ui/src/routes/main.css
@@ -466,6 +466,14 @@ a text {
   background-color: #afafaf;
 }
 
+#details .submit.small {
+  border-radius: 3px;
+  padding: 3px;
+  font-size: 14px;
+  width: auto;
+  margin: 4px 0;
+}
+
 #submit-container {
   position: relative;
   margin: 30px 0 20px 0;
@@ -550,16 +558,24 @@ a text {
 
 .next-best-departures {
   width: 100%;
-  margin-bottom: 30px;
+  margin: -20px 0 30px 0;
   border-collapse: collapse;
   line-height: 16px;
 }
 .next-best-departures td {
   padding: 0 6px;
-  height: 40px;
   border-top: 1px solid #dbdbdb;
   overflow: hidden;
 }
+
+.next-best-departures td.nosep {
+  border-top: none;
+}
+
+.next-best-departures td.right {
+  text-align: right;
+}
+
 .next-best-departures .no-conns {
   padding: 6px;
   font-style: italic;
