--- a/ui/src/routes/main.css
+++ b/ui/src/routes/main.css
@@ -495,6 +495,9 @@ a text {
   right: 50px;
   text-align: center;
 }
+#show-tsd .submit {
+  max-width: 400px;
+}
 
 .loading-screen {
   position: fixed;
