--- a/ui/src/routes/main.css
+++ b/ui/src/routes/main.css
@@ -114,11 +114,13 @@ noscript {
 #details > div {
   background-color: white;
   max-width: 600px;
+  min-height: 500px;
   margin: 0 auto;
   padding: 20px;
   box-sizing: border-box;
   border-radius: 30px 30px 0 0;
   overflow: hidden;
+  box-shadow: 0px 0px 10px #808080;
 }
 
 #details .train h4 {
@@ -133,19 +135,19 @@ noscript {
   width: 50px;
 }
 
-#details .arrdep{
+#details .arrdep {
   display: flex;
   margin-bottom: 20px;
 }
 
 #details .destarr {
   margin-bottom: 20px;
+  cursor: default;
 }
 
 .unstyled-link, .unstyled-link * {
   text-decoration: none;
   color: black;
-  cursor: default;
 }
 
 .arrdep .left, .arrdep .right {
@@ -343,7 +345,9 @@ a text {
   text-decoration: underline;
 }
 
-
+a.blue-link, a.blue-link * {
+  color: #01579B;
+}
 
 #header {
   background-color: #B71C1C;
@@ -631,11 +635,11 @@ a text {
 }
 
 .histogram-pointer.twosigma {
-  stroke: #c0c0c0;
+  stroke: #b0b0b0;
 }
 
 .histogram-label.twosigma {
-  fill: #c0c0c0;
+  fill: #b0b0b0;
 }
 
 .histogram-canvas {
